--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-pemrograman",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
